--- a/mainapp/blog/templates/users/list.html
+++ b/mainapp/blog/templates/users/list.html
@@ -1,20 +1,18 @@
 {% extends 'base.html' %}
 
 {% block title %}
-User List
+    Users list
 {% endblock %}
 
 {% block body %}
-<div class="row">
-    <div class="col">
-        <h1>Users</h1>
-        {{url_for('report.report_list')}}
-        {% for user in users %}
-        <ul>
-            <li><a href="{{ url_for('user.get_user', pk=user_id) }}">{{user.email}}</a></li>
-        </ul>
-        {% endfor %}
+    <div class="row">
+        <div class="col">
+            <h1>Users:</h1>
+            {% for user in users %}
+                <ul>
+                    <li><a href="{{ url_for('user.profile', pk=user.id) }}">{{ user.email }}</a></li>
+                </ul>
+            {% endfor %}
+        </div>
     </div>
-</div>
-
 {% endblock %}
