--- a/mainapp/blog/templates/users/profile.html
+++ b/mainapp/blog/templates/users/profile.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    User DETAIL
+    User profile
 {% endblock %}
 
 {% block body %}
-    <h1>{{user.email}}</h1>
+    <h1>{{ user.email }}</h1>
 {% endblock %}
